# authentication

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  auth.py  database.py  docker-compose.yml  main.py  pyproject.toml  users.db
.github/workflows/: deploy.yml  tests.yml
docs/: hashing.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: APIPlayground.jsx  Certificate.jsx  ChapterFeedback.jsx  CodeBlock.jsx  Diagram.jsx  Exercise.jsx  GuidedTutorial.jsx  JWTDecoder.jsx  MermaidDiagram.jsx  Navbar.jsx  PageTransition.jsx  Quiz.jsx  SearchDialog.jsx  ThemeToggle.jsx
frontend/src/data/: projects.js  quizzes.js
frontend/src/hooks/: useProgress.js  useTheme.js
frontend/src/lib/: mockApi.js
frontend/src/pages/: Cheatsheet.jsx  Home.jsx  LearnPage.jsx  NotFound.jsx  Playground.jsx
frontend/src/test/: mockApi.test.js  (+1 more)
learning-resources/: 00-password-hashing-and-storage.md  01-jwt-deep-dive.md  02-oauth2-explained.md  03-api-key-auth.md  04-session-based-auth.md  05-rbac-patterns.md  06-auth-in-rag-systems.md  07-cors-and-auth-security.md  README.md
project-1-basic/: README.md
project-1-basic/backend/: auth.py  database.py  main.py  models.py  requirements.txt  test_project1.py
project-1-basic/frontend/: index.html
project-2-medium/: README.md
project-2-medium/frontend/: index.html
project-3-advanced/: README.md
project-3-advanced/backend/: main.py  requirements.txt  test_project3.py
project-3-advanced/frontend/: index.html
(+37 files in other folders)
